代码优化，兼容java8版本